landing page draft

--- a/css/local.css
+++ b/css/local.css
@@ -54,7 +54,7 @@
     content: '';
     position: absolute;
     display: block;
-    height: 100%;
+    height: 80%;
     width: 100%;
     background: var(--primary);
     opacity: 1;
@@ -80,7 +80,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 80%;
     width: 100%;
     object-fit: cover;
   }
@@ -88,13 +88,18 @@
 /* Inbetween */
 @media only screen and (min-width: 666px) {
   #sidebyside {
-    padding: 6.25em 0;
+    padding-top: 7.25em;
+    
+    
   }
 }
 /* Small Desktop */
 @media only screen and (min-width: 1300px) {
   #sidebyside {
-    padding: 9.375em 0;
+    /* padding: 9.375em 0; */
+    padding-top: 9.375em 0;
+    margin-bottom: -50px;
+    
   }
   #sidebyside .container {
     max-width: 86.9375em;
@@ -242,6 +247,7 @@
   #cta {
     position: relative;
     padding: 3.125em 0;
+    
   }
   #cta:before {
     content: '';
@@ -329,7 +335,7 @@
     margin: auto;
   }
   #cta picture {
-    width: 90.0625%;
+    width: 100%;
     left: 50%;
     transform: translateX(-50%);
   }
@@ -346,9 +352,12 @@
     z-index: 1;
   }
 }
+
+
 /* Dark Mode */
 @media only screen and (min-width: 0em) {
   body.dark-mode #cta:after {
     display: none;
   }
 }
+
