--- a/css/critical.css
+++ b/css/critical.css
@@ -118,7 +118,7 @@
   #hero {
     padding-top: 17.0625em;
     padding-bottom: 19.1875em;
-    background: url("../images/landing.jpg");
+    background: url("../newimg/shop\ 2.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
