--- a/landing.css
+++ b/landing.css
@@ -180,7 +180,7 @@
       transform: rotate(-14.36deg) translateX(-6.25rem);
     }
     #hero-929 .cs-picture {
-        
+    visibility: hidden;
       width: 65%;
       height: auto;
       max-height: 37.375rem;
@@ -231,6 +231,7 @@
         margin-top: .6rem;
         /* margin-bottom: -20px */
         overflow:hidden;
+        height: 190px;
       }
   }
   /* Tablet - 768px */
@@ -243,6 +244,7 @@
     }
     #exceptionalheader  {
         margin-top:-.5rem;
+        
         text-align: center;
     }
   }
