--- a/landing.css
+++ b/landing.css
@@ -232,7 +232,7 @@
         text-align: center;
     }
     #hero-929 .cs-picture-group {
-        margin-top: .6rem;
+        margin-top: -2.6rem;
         /* margin-bottom: -20px */
         overflow:hidden;
         height: auto;
@@ -325,7 +325,8 @@
 
   #under-main  {
     box-shadow: 2px 2px 2px 1px #4444;
-    width: 23rem;
+    display: flex;
+justify-content: center;
   }
 
   
