added navigation, touching up

--- a/landing.css
+++ b/landing.css
@@ -232,7 +232,7 @@
         text-align: center;
     }
     #hero-929 .cs-picture-group {
-        margin-top: -2.6rem;
+        margin-top: 1.4rem;
         /* margin-bottom: -20px */
         overflow:hidden;
         height: auto;
@@ -329,4 +329,6 @@
 justify-content: center;
   }
 
-  
+  #INVISIBLE{
+    visibility: hidden;
+  }
