--- a/landing.css
+++ b/landing.css
@@ -36,7 +36,7 @@
       
     #hero-929 .cs-container {
       width: 100%;
-      
+      height: 100%;
       max-width: 80rem;
       margin: auto;
       padding-bottom: .0rem;
@@ -113,7 +113,7 @@
       z-index: 1;
       /* prevents padding from adding to the width */
       box-sizing: border-box;
-      box-shadow: 0px 0px 2px 2px #ffffff;
+      box-shadow: 2px 2px 0px 0px #ffffff;
     }
     #hero-929 .cs-button-solid:before {
       content: '';
